# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
config("screenlock_mgr_interfaces_kits_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = []
}
ohos_shared_library("screenlock") {
  if (is_standard_system) {
    include_dirs = [
      "//foundation/arkui/napi/interfaces/kits",
      "//third_party/node/src",
      "//foundation/ability/ability_runtime/services/common/include",
      "//utils/system/safwk/native/include",
      "//base/theme/screenlock_mgr/interfaces/kits/napi/include",
      "//base/theme/screenlock_mgr/services/include",
      "//base/theme/screenlock_mgr/utils/include",
      "//commonlibrary/c_utils/base/include",
    ]
    public_configs = [ ":screenlock_mgr_interfaces_kits_napi_config" ]
    sources = [
      "src/async_call.cpp",
      "src/napi_screenlock_ability.cpp",
      "src/screenlock_callback.cpp",
      "src/screenlock_js_util.cpp",
      "src/screenlock_system_ability_callback.cpp",
    ]
    deps =
        [ "//base/theme/screenlock_mgr/frameworks/kitsimpl:screenlock_client" ]
    external_deps = [
      "c_utils:utils",
      "hitrace_native:hitrace_meter",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "napi:ace_napi",
    ]
    relative_install_dir = "module"
    subsystem_name = "theme"
    part_name = "screenlock_mgr"
  }
}

ohos_static_library("screenlock_static") {
  if (is_standard_system) {
    include_dirs = [
      "//foundation/arkui/napi/interfaces/kits",
      "//third_party/node/src",
      "//foundation/ability/ability_runtime/services/common/include",
      "//utils/system/safwk/native/include",
      "//base/theme/screenlock_mgr/interfaces/kits/napi/include",
      "//base/theme/screenlock_mgr/services/include",
      "//base/theme/screenlock_mgr/utils/include",
      "//commonlibrary/c_utils/base/include",
    ]
    public_configs = [ ":screenlock_mgr_interfaces_kits_napi_config" ]
    sources = [
      "src/async_call.cpp",
      "src/napi_screenlock_ability.cpp",
      "src/screenlock_callback.cpp",
      "src/screenlock_js_util.cpp",
      "src/screenlock_system_ability_callback.cpp",
    ]
    deps =
        [ "//base/theme/screenlock_mgr/frameworks/kitsimpl:screenlock_client" ]
    external_deps = [
      "c_utils:utils",
      "hitrace_native:hitrace_meter",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "napi:ace_napi",
    ]
    subsystem_name = "theme"
    part_name = "screenlock_mgr"
  }
}
