# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

#####################hydra-fuzz###################
import("../../../screenlock.gni")

##############################fuzztest##########################################
ohos_fuzztest("ScreenlockManagerFuzzTest") {
  module_out_path = "screenlock_mgr/screenlock_mgr"

  fuzz_config_file =
      "${screenlock_mgr_path}/test/fuzztest/screenlockmanager_fuzzer"

  include_dirs = [
    "${screenlock_mgr_path}/frameworks/js/napi/include",
    "${screenlock_mgr_path}/services/include",
    "${screenlock_mgr_path}/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "${screenlock_mgr_path}/frameworks/js/napi:screenlock_static",
    "${screenlock_mgr_path}/interfaces/inner_api:screenlock_client_static",
    "${screenlock_mgr_path}/services:screenlock_server_static",
    "${screenlock_mgr_path}/utils:screenlock_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "window_manager:libdm",
  ]

  sources = [ "screenlockmanager_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ScreenlockManagerFuzzTest",
  ]
}
###############################################################################
