# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/theme/screenlock_mgr/screenlock.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("ScreenlockServiceFuzzTest") {
  module_out_path = "theme/screenlock_mgr"

  fuzz_config_file =
      "${screenlock_mgr_path}/test/fuzztest/screenlockservice_fuzzer"

  include_dirs = [
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "//foundation/ability/ability_runtime/services/common/include",
    "${screenlock_mgr_path}/frameworks/js/napi/include",
    "${screenlock_mgr_path}/services/include",
    "${screenlock_mgr_path}/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "${screenlock_mgr_path}/frameworks/js/napi:screenlock_static",
    "${screenlock_mgr_path}/frameworks/native:screenlock_client",
    "${screenlock_mgr_path}/services:screenlock_server_static",
    "${screenlock_mgr_path}/utils:screenlock_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "window_manager:libdm",
  ]

  sources = [ "screenlockservice_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ScreenlockServiceFuzzTest",
  ]
}
###############################################################################
