# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("ScreenlockUnlockCallbackFuzzTest") {
  module_out_path = "miscservices/screenlock"

  include_dirs = [
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "//foundation/ability/ability_runtime/services/common/include",
    "//utils/system/safwk/native/include",
    "//base/miscservices/screenlock/interfaces/kits/napi/include",
    "//base/miscservices/screenlock/services/include",
    "//base/miscservices/screenlock/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "//base/miscservices/screenlock/frameworks/kitsimpl:screenlock_client",
    "//base/miscservices/screenlock/interfaces/kits/napi:screenlock",
    "//base/miscservices/screenlock/utils:screenlock_utils",
    "//foundation/arkui/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  sources = [ "screenlockunlockcallback_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ScreenlockUnlockCallbackFuzzTest",
  ]
}
###############################################################################
